# RestaurantCRM

./: .gitignore  CMakeLists.txt  README.md  init.sql
src/: main.cpp
src/backend/: server_admin.cpp  server_admin.h  server_employee.cpp  server_employee.h  server_login_creation.cpp  server_login_creation.h  server_user.cpp  server_user.h
src/core/: dbconnection.h  dbconnection_example.cpp  generic_utils.h
src/ui/: adminwindow.cpp  adminwindow.h  adminwindow.ui  creationacc.cpp  creationacc.h  creationacc.ui  employeewindow.cpp  employeewindow.h  employeewindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuwindow.cpp  menuwindow.h  menuwindow.ui  myorders.cpp  myorders.h  myorders.ui  userwindow.cpp  userwindow.h  userwindow.ui
